PRJ_VER=1.0.6
SUMMARY=Fedora version will now automatically updated;Fixed 879141
BODHI_UPDATE_TYPE=bugfix
REDHAT_BUGZILLA=879141
[Changes]
- Fedora version will now automatically updated
- Fixed Bug 879141 - Excessive quotation mark for target tag_pre
- New target: commit_clean
- New script: cmake-fedora-koji
[TODO]
